@@ -5,17 +5,17 @@ useMapDrawerForAddress = 0
 uploadDirectories {
 
 	# cat=ad: Google Maps API/file/10; type=string; label= Path to the category icons: All uploaded files will be stored in this folder.
-	categoryIcons = EXT:ad_google_maps/Resources/Public/Uploads/Category/
+	categoryIcons = uploads/tx_adgooglemaps/
 
 	# cat=ad: Google Maps API/file/20; type=string; label= Path to the marker icons: All uploaded files will be stored in this folder.
-	markerIcons = EXT:ad_google_maps/Resources/Public/Uploads/Marker/
+	markerIcons = uploads/tx_adgooglemaps/
 
 	# cat=ad: Google Maps API/file/30; type=string; label= Path to the marker shadow icons: All uploaded files will be stored in this folder.
-	shadowIcons = EXT:ad_google_maps/Resources/Public/Uploads/Shadow/
+	shadowIcons = uploads/tx_adgooglemaps/
 
 	# cat=ad: Google Maps API/file/40; type=string; label= Path to the mouse cursor: All uploaded files will be stored in this folder.
-	mouseCursor = EXT:ad_google_maps/Resources/Public/Uploads/MouseCursor/
+	mouseCursor = uploads/tx_adgooglemaps/
 
 	# cat=ad: Google Maps API/file/50; type=string; label= Path to the KML files: All uploaded files will be stored in this folder.
-	kmlFiles = EXT:ad_google_maps/Resources/Public/Uploads/KML/
+	kmlFiles = uploads/tx_adgooglemaps/
 }
