@@ -12,3 +12,6 @@
 		[TASK] Language behaviour for flexform changed.
 		[TASK] Behaviour for Tx_AdGoogleMaps_Service_MapPluginAdapter->getPropertyValue changed to accept overriding by database field.
 		[TASK] Complete documentation.
+		[TASK] Tx_AdGoogleMaps_Domain_Model_Category->getSubCategories changed.
+		[TASK] Changed upload directory to default uploads/tx_adgooglemaps/.
+		[TASK] Changed TS files from *.txt to *.ts.
